k8s/code-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-service
  labels:
    app: code-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-service
  template:
    metadata:
      labels:
        app: code-service
    spec:
      containers:
        - name: code-service
          image: varzzz/code-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3500
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: code-service
  labels:
    job: code-service
    app: code-service
spec:
  selector:
    app: code-service
  ports:
  - name: code-service
    protocol: TCP
    port: 3500
    targetPort: 3500
  type: LoadBalancer
