k8s/socket-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-service
  labels:
    app: socket-service
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: socket-service
  template:
    metadata:
      labels:
        app: socket-service
    spec:
      containers:
      - name: socket-service
        image: varzzz/socket-service:latest 
        ports:
        - containerPort: 3001  
        resources:
          limits:
            memory: "512Mi" 
            cpu: "500m"      
          requests:
            memory: "256Mi"  
            cpu: "250m"     

---
apiVersion: v1
kind: Service
metadata:
  name: socket-service
spec:
  selector:
    app: socket-service
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 3001  
  type: ClusterIP
