k8s/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-service
  labels:
    app: room-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: room-service
  template:
    metadata:
      labels:
        app: room-service
    spec:
      containers:
      - name: room-service
        image: subashreedinesh/room-service:latest
        ports:
        - containerPort: 5050
        readinessProbe:
          httpGet:
            path: /health
            port: 5050
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 5050
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: room-service
spec:
  selector:
    app: room-service
  ports:
  - protocol: TCP
    port: 5050
    targetPort: 5050
  type: ClusterIP
